:construction: Add version: 1.0.0
