# swagger/swagger_output.json
@@ -63,7 +63,7 @@
         }
       }
     },
-    "/users/ambassadors?=animals": {
+    "/users/ambassadors/animals": {
       "get": {
         "description": "",
         "parameters": [],
@@ -77,7 +77,7 @@
         }
       }
     },
-    "/users/ambassadors?=environment": {
+    "/users/ambassadors/environment": {
       "get": {
         "description": "",
         "parameters": [],
@@ -91,7 +91,7 @@
         }
       }
     },
-    "/users/ambassadors?=human": {
+    "/users/ambassadors/human": {
       "get": {
         "description": "",
         "parameters": [],
@@ -105,7 +105,7 @@
         }
       }
     },
-    "/users/ambassadors?=plants": {
+    "/users/ambassadors/plants": {
       "get": {
         "description": "",
         "parameters": [],
@@ -135,10 +135,16 @@
                 "email": {
                   "example": "any"
                 },
-                "name": {
+                "animals": {
                   "example": "any"
                 },
-                "ambassador": {
+                "environment": {
+                  "example": "any"
+                },
+                "human": {
+                  "example": "any"
+                },
+                "plants": {
                   "example": "any"
                 },
                 "bio": {
@@ -197,49 +203,7 @@
         }
       }
     },
-    "/users/token/newPassword/{id}": {
-      "patch": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "password": {
-                  "example": "any"
-                },
-                "email": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/users/profile/token/{id}": {
+    "/users/update/token/{id}": {
       "patch": {
         "description": "",
         "parameters": [
@@ -295,6 +259,149 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/maps/points": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/maps/token/map": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "pointName": {
+                  "example": "any"
+                },
+                "cep": {
+                  "example": "any"
+                },
+                "number": {
+                  "example": "any"
+                },
+                "street": {
+                  "example": "any"
+                },
+                "district": {
+                  "example": "any"
+                },
+                "city": {
+                  "example": "any"
+                },
+                "state": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/maps/token/update/{id}": {
+      "patch": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "cep": {
+                  "example": "any"
+                },
+                "number": {
+                  "example": "any"
+                },
+                "street": {
+                  "example": "any"
+                },
+                "district": {
+                  "example": "any"
+                },
+                "city": {
+                  "example": "any"
+                },
+                "state": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/maps/token/delete/{id}": {
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
